# pynucastro

./: .codespell-ignore-words  .codespellrc  .coveragerc  .flake8  .gitignore  .mailmap  .travis.yml  .zenodo.json  CHANGES  CHANGES.md  CITATION  CITATION.md  CONTRIBUTING.md  Example-Integrating-Network-diffeqpy.html  Example-Integrating-Network-diffeqpy.ipynb  Installing-Diffeqpy-Julia.html  Installing-Diffeqpy-Julia.ipynb  LICENSE  NSE-direct-integration.html  NSE-example.html  NSE-example.ipynb  README.md  SECURITY.md  adding-rates.html  alpha-gamma-approx.html  alpha-gamma-approx.ipynb  alternate-rates.html  alternate-rates.ipynb  amemass.py  amrex-astro-cxx-networks.html  approx-rates-examples.html  approx-rates-examples.ipynb  approximate-rates.html  aprox13.html  basic_network.html  changes.html  citing.html  co-approximations.html  code_of_conduct.md  codemeta.json  (+161 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codespell.yml  cxx-cuda-network.yml  cxx-hip-network.yml  cxx-network.yml  docs-test.yml  flake8.yml  fortran-network.yml  gh-pages.yml  isort.yml  nbval_sanitize.cfg  nbval_sanitize_file  partition-function-cxx.yml  pydocstyle.yml  pylint.yml  pytest-37.yml  pytest-38.yml  pytest-all.yml  pytest-mac.yml  pytest-random.yml  pytest-win.yml  pytest.yml  simple-cxx-network.yml  zenodo_json.yml
_modules/: index.html
_modules/pynucastro/: mesa_utils.html  mpi_utils.html  rates.html  utils.html  yt_utils.html
_sources/: NSE-direct-integration.ipynb  NSE-example.ipynb.txt  alpha-gamma-approx.ipynb  alternate-rates.ipynb  basic_network.ipynb  custom-rates.ipynb  cxx-networks.rst  cxx-networks.rst.txt  derived-rates.rst  electron-captures.ipynb.txt  fermi-integrals.ipynb  finding-rates.ipynb  he-burning-example.ipynb  index.rst  index.rst.txt  inert-nuclei.ipynb  install.rst  intro.rst  intro.rst.txt  library-examples.ipynb  modified-rates.ipynb  modify-example.ipynb  modules.rst  modules.rst.txt  network-cycles.ipynb  networks.rst.txt  neutrino-cooling-effects.ipynb  neutrino-cooling.ipynb  nse-protons.ipynb  nucleus.ipynb  partition-function.rst  plot-types.ipynb  pynucastro-examples.ipynb  pynucastro-examples.ipynb.txt  pynucastro-integration.ipynb  pynucastro-integration.ipynb.txt  pynucastro.networks.rst.txt  pynucastro.networks.sympy_network_support.rst  pynucastro.nucdata.rst  pynucastro.nucdata.rst.txt  (+14 more)
_sources/examples/: pp-cno.ipynb
_static/: documentation_options.js
docs/: Makefile  index.html  intro.html  library-examples-filtering.html  modules.html  notes.txt  objects.inv  parse_changelog.py  pynucastro.networks.html  regen_notebook.sh  search.html  searchindex.js
docs/_sources/: index.rst.txt  intro.rst.txt  pynucastro-examples.ipynb.txt  pynucastro.nucdata.rst.txt  sources.rst.txt
docs/_static/: documentation_options.js
docs/images/: README
docs/source/: Example-Integrating-Network-diffeqpy.ipynb  Installing-Diffeqpy-Julia.ipynb  NSE-direct-integration.ipynb  NSE-example.ipynb  adding-rates.rst  alpha-gamma-approx.ipynb  alternate-rates.ipynb  amrex-astro-cxx-networks.rst  api.rst  approx-rates-examples.ipynb  approximate-rates.rst  aprox13.ipynb  basic_network.ipynb  changes.rst  citing.rst  co-approximates.ipynb  co-approximations.ipynb  conf.py  custom-rates.ipynb  custom_rates.ipynb  cxx-networks.rst  data_sources.rst  derived-rates.rst  documenting-networks.ipynb  double-n-capture.ipynb  duplicate-rates.ipynb  duplicate_rates.ipynb  electron-capture-example.ipynb  electron-captures.ipynb  electron-eos.ipynb  fermi-integrals.ipynb  finding-rates.ipynb  fortran-network.rst  he-burning-example.ipynb  index.rst  inert-nuclei.ipynb  install.rst  installing-diffeqpy-julia.rst  intro.rst  julia.rst  (+112 more)
examples/: GMake.common  GMake.common.mk  GMake.defs  GMake.defs.mk  GMake.target.mk  README.md  approx13.ipynb  approx_rates.ipynb  binding-energy.html  binding-energy.ipynb  burn.py  flow.py  he-burning.html  he-burning.ipynb  hot-CNO-breakout-example.html  hot-CNO-breakout-example.ipynb  interactive-example.ipynb  library-example.ipynb  library-examples-filtering.ipynb  library-examples-nuclei.ipynb  library-examples.ipynb  library-filtering-examples.ipynb  network_diagram.py  o16o16_rates.ipynb  pp-CNO-example.ipynb  pp-cno.html  pp-cno.ipynb  pp-example.ipynb  pynet_approx_example.ipynb  pynucastro-examples.ipynb  pynucastro-integration.ipynb  pyreaclib-examples.ipynb  python_net_approx.ipynb  supernova-lightcurve.html  supernova-lightcurve.ipynb  test.py  triple_alpha_eval.html  triple_alpha_eval.ipynb  validate.py
examples/C-boxlib/: README.md  c.py
examples/C-starkiller/: README.md  actual_rhs.f90  c.py
examples/CNO/: README.md  burn.py  cno.py  cno_rhs.py.benchmark
examples/CNO_cython/: cno_rhs.pyx  setup.py
examples/CNO_f90/: Makefile  README.md  cno.py  cvode_parameters.f90  data_wrangler.f90  integrator.f90  integrator.f90.template  net.par  net_rates.f90  network.f90  parameters.f90
examples/CNO_sundials/: cno.py
examples/CNO_with_reverse/: cno.py  network_module.py
examples/C_f90/: Makefile  README.md  c.py  c12-c12a-ne20-cf88  cvode_parameters.f90  integrator.f90  net.par  net_rates.f90  network.f90  network.f90.template
examples/C_f90_reference/: cvode_parameters.f90
examples/C_f90_screeningmods/: GNUmakefile  cvode_parameters.f90  data_wrangler.f90  integrator.f90  net.par  net_rates.f90  network.f90  out  parameters.f90  rhs.f90  screen.f90  screened-C_f90  unscreened-C_f90  ut
examples/C_starkiller/: actual_network.f90  c.py  reaclib_rates.f90  table_rates.f90
examples/C_sundials/: README.md  c.py
examples/URCA-boxlib/: README.md  urca.py
logo/: logo_base.py
paper/: Makefile  paper.bib  paper.md
pynucastro/: .coverage  __init__.py  mesa_utils.py  mpi_utils.py  numba_util.py  utils.py  yt_utils.py
pynucastro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyreaclib/: NOTES  __init__.py
reaclib-rates/: he3-he3pp-he4-nacr  he4-aag-c12-fy05  he4-npahe3-li7-mafo
test/: README.md  replace-standard.py  test.py  test_reaclib.py
util/: dep.py  grid.py
util/BLAS/: daxpy.f  (+5 more)
(+859 files in other folders)
