# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]

[tool.pylint.MAIN]
ignore = ['_python_reference', 'test_full_python_net.py']
extension-pkg-allow-list = ['mpi4py']

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "unspecified-encoding",
  "line-too-long",
  "wrong-import-order",
  "too-many-branches",
  "too-many-lines",
  "too-many-statements",
  "too-many-instance-attributes",
  "too-many-arguments",
  "too-many-locals",
  "too-few-public-methods",
  "invalid-name",
  "consider-using-f-string",
  "consider-using-with",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
]
enable = ["useless-suppression"]

[tool.pylint.CLASSES]
defining-attr-methods = [
  "__init__",
  "__new__",
  "setUp",
  "asyncSetUp",
  "__post_init__",
  "setup_class", "setup_method",  # for tests
]

[tool.pylint.FORMAT]
max-line-length = 132

[tool.pylint.SIMILARITIES]
min-similarity-lines = 10

[tool.pylint.TYPECHECK]
generated-members = ["viridis", "bwr"]
# see https://github.com/PyCQA/pylint/issues/2289 for the generated-members

[tool.codespell]
skip = ".git,*docs/build,*.bib"

[tool.isort]
known_first_party = ["pynucastro"]
skip = ["pynucastro/networks/tests/_python_reference/network.py"]

[tool.pytest.ini_options]
addopts = """\
  --ignore=docs \
  --ignore-glob=pynucastro/library/tabular/*.ipynb \
  --ignore=examples/rxn-network-integration.ipynb \
  --ignore=examples/o16o16_rates.ipynb \
  """
