# pyproject.toml
[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"


# project metadata

[project]
name = "pynucastro"
description = "A python library for nuclear astrophysics"
readme = "README.md"
license.text = "BSD"
authors = [
  {name="pynucastro development group"},
  {email="michael.zingale@stonybrook.edu"},
]
dynamic = ["version"]

dependencies = [
  "networkx",
  "numpy",
  "sympy",
  "scipy",
  "matplotlib",
  "ipywidgets",
]
optional-dependencies.numba = ["numba"]

[project.urls]
Homepage = "https://github.com/pynucastro/pynucastro"
Documentation = "https://pynucastro.github.io/pynucastro/"


# packaging

[tool.setuptools]
zip-safe = false
# we explicitly list the data we want below
include-package-data = false

[tool.setuptools.packages.find]
include = ["pynucastro*"]
exclude = ["*.tests*"]
namespaces = false

[tool.setuptools.package-data]
# additional files to include when building a wheel
pynucastro = [
  "library/*",
  "library/tabular/*",
  "library/tabular/suzuki/*",
  "library/tabular/langanke/*",
  "templates/**/*",
  "nucdata/*",
  "nucdata/AtomicMassEvaluation/*",
  "nucdata/PartitionFunction/*",
]

[tool.setuptools_scm]
version_scheme = "post-release"
version_file = "pynucastro/_version.py"


# development tools

[tool.pylint.MAIN]
ignore = ['_python_reference', 'test_full_python_net.py']
extension-pkg-allow-list = ['mpi4py']

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "unspecified-encoding",
  "line-too-long",
  "wrong-import-order",
  "too-many-branches",
  "too-many-lines",
  "too-many-statements",
  "too-many-instance-attributes",
  "too-many-arguments",
  "too-many-locals",
  "too-few-public-methods",
  "invalid-name",
  "consider-using-f-string",
  "consider-using-with",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
]
enable = ["useless-suppression"]

[tool.pylint.CLASSES]
defining-attr-methods = [
  "__init__",
  "__new__",
  "setUp",
  "asyncSetUp",
  "__post_init__",
  "setup_class", "setup_method",  # for tests
]

[tool.pylint.FORMAT]
max-line-length = 132

[tool.pylint.SIMILARITIES]
min-similarity-lines = 10

[tool.pylint.TYPECHECK]
generated-members = ["viridis", "bwr"]
# see https://github.com/PyCQA/pylint/issues/2289 for the generated-members


[tool.codespell]
skip = ".git,*docs/build,*.bib"


[tool.isort]
known_first_party = ["pynucastro"]
skip = ["pynucastro/networks/tests/_python_reference/network.py"]


[tool.pytest.ini_options]
addopts = """\
  --ignore=docs \
  --ignore-glob=pynucastro/library/tabular/*.ipynb \
  --ignore=examples/rxn-network-integration.ipynb \
  --ignore=examples/o16o16_rates.ipynb \
  --nbval-sanitize-with .github/workflows/nbval_sanitize.cfg \
  """
filterwarnings = [
  "error",
]
