# pyproject.toml
[build-system]
requires = ["setuptools>=77", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"


# project metadata

[project]
name = "pynucastro"
description = "A python library for nuclear astrophysics"
readme = "README.md"
license = "BSD-3-Clause"
authors = [
  {name="pynucastro development group"},
  {email="michael.zingale@stonybrook.edu"},
]
dynamic = ["version"]

dependencies = [
  "networkx",
  "numpy",
  "sympy",
  "scipy",
  "matplotlib",
  "ipywidgets",
]
optional-dependencies.numba = ["numba"]

[project.urls]
Homepage = "https://github.com/pynucastro/pynucastro"
Documentation = "https://pynucastro.github.io/pynucastro/"


# packaging

[tool.setuptools]
zip-safe = false
# we explicitly list the data we want below
include-package-data = false

[tool.setuptools.packages.find]
include = ["pynucastro*"]
exclude = ["*.tests*"]
namespaces = false

[tool.setuptools.package-data]
# additional files to include when building a wheel
pynucastro = [
  "library/*",
  "library/tabular/*",
  "library/tabular/suzuki/*",
  "library/tabular/langanke/*",
  "library/tabular/ffn/*",
  "library/tabular/oda/*",
  "templates/**/*",
  "nucdata/*",
  "nucdata/AtomicMassEvaluation/*",
  "nucdata/PartitionFunction/*",
]

[tool.setuptools_scm]
version_scheme = "post-release"
version_file = "pynucastro/_version.py"


# development tools

[tool.pylint.MAIN]
ignore = ['_python_reference', 'test_full_python_net.py']
extension-pkg-allow-list = ['mpi4py']

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "unspecified-encoding",
  "line-too-long",
  "wrong-import-order",
  "too-many-branches",
  "too-many-lines",
  "too-many-statements",
  "too-many-instance-attributes",
  "too-many-arguments",
  "too-many-positional-arguments",
  "too-many-locals",
  "too-few-public-methods",
  "too-many-public-methods",
  "invalid-name",
  "consider-using-f-string",
  "consider-using-with",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
]
enable = ["useless-suppression"]

[tool.pylint.CLASSES]
defining-attr-methods = [
  "__init__",
  "__new__",
  "setUp",
  "asyncSetUp",
  "__post_init__",
  "setup_class", "setup_method",  # for tests
]

[tool.pylint.FORMAT]
max-line-length = 132

[tool.pylint.SIMILARITIES]
min-similarity-lines = 10

[tool.pylint.TYPECHECK]
generated-members = ["viridis", "bwr"]
# see https://github.com/PyCQA/pylint/issues/2289 for the generated-members


[tool.codespell]
skip = ".git,*docs/build,*.bib"


[tool.isort]
known_first_party = ["pynucastro"]
skip = ["pynucastro/networks/tests/_python_reference/network.py",
        "pynucastro/_version.py"]


[tool.pytest.ini_options]
# Example-Integrating-Network-diffeqpy.ipynb: needs Julia
# docs/source/*.ipynb: symlinks to notebooks we're already testing
# pynucastro/library/tabular/*/generate_*.ipynb: tabular rate file generation
# examples/rxn-network-integration.ipynb: very slow integration
addopts = """\
  --ignore=docs/source/Example-Integrating-Network-diffeqpy.ipynb \
  --ignore=docs/source/library-examples.ipynb \
  --ignore=docs/source/pynucastro-examples.ipynb \
  --ignore=docs/source/pynucastro-integration.ipynb \
  --ignore=docs/source/duplicate-rates.ipynb \
  --ignore=docs/source/electron-eos.ipynb \
  --ignore-glob=pynucastro/library/tabular/*/generate_*.ipynb \
  --ignore=pynucastro/eos/generate_quadrature_weights.ipynb \
  --ignore=pynucastro/eos/degenerate_derivatives.ipynb \
  --ignore=examples/rxn-network-integration.ipynb \
  --nbval-sanitize-with .github/workflows/nbval_sanitize.cfg \
  """
filterwarnings = [
  "error",
  "ignore: ReacLib neutron decay rate",
]

[tool.ruff]
line-length = 132
exclude = [
  "docs/",
  "examples/",
  "pynucastro/networks/tests/_python_reference/",
  "pynucastro/nucdata/AtomicMassEvaluation/",
]

[tool.ruff.lint]
select = ["E", "F", "W", "NPY", "PL", "RUF", "RET"]
ignore = [
  "E501",  # Line too long (82 &gt; 79 characters)
  "E741",  # Do not use variables named 'I', 'O', or 'l'
  "PLR0912",  # too-many-branches
  "PLR0913",  # too-many-arguments
  "PLR0915",  # too-many-statements
  "RUF001",  # ambiguous-unicode-character-string
  "RUF002",  # ambiguous-unicode-character-docstring
  "RUF005",  # Consider {expr} instead of concatenation
  "RUF012",  # Mutable class attributes should be annotated with `typing.ClassVar`
  "RUF013",  # PEP 484 prohibits implicit `Optional`
  "RUF015",  # Prefer `next({iterable})` over single element slice
  "RET504",  # Unnecessary variable assignment before return statement
  "RET505",  # no-else-return (handled by pylint)
  # optional checkers, disabled by default
  "PLC1901",  # compare-to-empty-string
  "PLR0913",  # Too many arguments to function call
  "PLR2004",  # Magic value used in comparison
  "PLW2901",  # redefined-loop-name
  "PLR5501",  # Use `elif` instead of `else` then `if`, to reduce indentation (check_elif extension)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pydocstyle]
convention = "numpy"
add-ignore = [
  "D105",  # Missing docstring in magic method
  "D202",  # No blank lines allowed after function docstring
  "D205",  # 1 blank line required between summary line and description
  "D400",  # First line should end with a period
]
# exclude directories that start with "." or "_", as well as the
# scripts under pynucastro/library
match-dir='^(?![._])(?!library$).*'